--- a/wave-frontend-client/package.json
+++ b/wave-frontend-client/package.json
@@ -16,6 +16,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
